loan/deployment/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loan
  labels:
    app: loan
spec:
  selector:
    matchLabels:
      app: loan
  replicas: 1
  template:
    metadata:
      name: loan
      labels:
        app: loan
    spec:
      containers:
        - name: loan
          image: docker.io/k03147/loan
          imagePullPolicy: Always
          ports:
            - name: port1
              containerPort: 10004
          resources:
            requests:
              cpu: 500m
              memory: 512Mi
            limits:
              cpu: 500m
              memory: 1024Mi
---
apiVersion: v1
kind: Service
metadata:
  name: loan
spec:
  type: ClusterIP
  selector:
    app: loan
  ports:
    - name: loan
      port: 10005
      targetPort: 10004
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loan
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: pocketmoney.165.192.105.60.nip.io/loan
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: loan
                port: 
                  number: 10004
